Fix like button

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,5 +1,5 @@
 .green-background {
-  background-color: rgb(156, 231, 126) !important;
+  background-color: $green !important;
 }
 
 .grey-background {
