--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -76,7 +76,7 @@ body {
 
 .message-name a:hover {
   text-decoration: none;
-  color: $orange;
+  // color: $orange;
 }
 
 .message-time {
@@ -101,21 +101,24 @@ body {
   margin-top: 10px;
 }
 
-.message-actions .btn {
+.message-actions .btn-primary {
+  background-color: white;
+  border: 1px solid $purple;
+  color: $purple;
+  margin: 2px;
   font-size: 12px;
   border-radius: 1px;
   padding-right: 1rem;
   padding-left: 1rem;
-  color: #000;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: $gray;
   line-height: 1;
 }
-
-.message-actions .btn-primary {
-  background-color: white;
-  border-color: $purple;
-  color: $purple;
-  margin: 2px;
+.message-actions .btn-primary a {
+  text-decoration: none;
 }
+
 
 .message-actions .btn-primary:hover {
   border-color: $purple;
@@ -123,21 +126,7 @@ body {
   color: white;
 }
 
-.message-actions .btn-secondary {
-  background-color: white;
-  border-color: #ccc;
-  color: #555;
-}
-
-.message-actions .btn-secondary:hover {
-  background-color: #f9f9f9;
-  border-color: #bbb;
-  color: #555;
-}
-
 .message-input {
-  // position: sticky;
-  // bottom: 0;
   margin-right: 8px;
   margin-top: 8px;
   justify-self: flex-end;
