Fix issues list padding/margin issues

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -2,6 +2,14 @@
   background-color: $green !important;
 }
 
+.dark-mode {
+  .green-background {
+    color: gray;
+    font-weight: bold;
+  }
+}
+
+
 .grey-background {
   background-color: lightgray !important;
 }
