--- a/app/views/pages/chat.html.erb
+++ b/app/views/pages/chat.html.erb
@@ -2,7 +2,7 @@
 <div class="row"
   data-controller="issues-messages"
   >
-  <div class="col-1 bg-dark p-3 border-right border-black">
+  <div class="col-1 bg-dark p-3">
     <div class="d-flex justify-content-center">
       <%= render "channels/index", channels: @channels %>
     </div>
