Add white to the message input so it works in dark mode

--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -136,6 +136,14 @@ body {
   margin-right: 16px;
 }
 
+.trix-button-group {
+  background: white;
+}
+
+.message-input .trix-content {
+  background: white;
+}
+
 .message-helpful {
   position: absolute;
   right: -12x;
