--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
 @import "./actiontext.css";
+@import "highlightjs/styles/monokai-sublime";
 
 // Your CSS partials
 @import "components/index";
