--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -4,16 +4,13 @@
       <div class="message-img">
         <%= image_tag message.user.image %>
       </div>
-      <div class="message-name"><%= link_to message.user.nickname, user_path(message.user.id) %> - Batch #<%= message.user.batch %></div>
+      <div class="message-name"><%= link_to message.user.nickname, user_path(message.user.id) %> (Batch #<%= message.user.batch %>)</div>
       <div class="message-time">
         <%=distance_of_time_in_words(Time.now, message.created_at)%>
       </div>
     </div>
     <div class="message-body">
       <div id="message-<%= message.id %>">
-        <small>
-          <strong><%= message.user.nickname %></strong>
-        </small>
         <div class="trix-content"><%= message.content %></div>
       </div>
     </div>
