--- a/app/views/issues/_list.html.erb
+++ b/app/views/issues/_list.html.erb
@@ -1,5 +1,5 @@
 <div data-search-issues-target="list">
-  <% @issues.reverse.each do |issue| %>
+  <% @issues.each do |issue| %>
     <div class="issue mx-3 link-primary">
       (<%= issue.messages.count %>) <%= link_to issue.title, channel_issue_path(issue.channel, issue), data: {action: "click->issues-messages#render", issues_messages_target: "issueLink"} %>
     </div>
