--- a/app/views/pages/chatgpt.html.erb
+++ b/app/views/pages/chatgpt.html.erb
@@ -1,3 +1,9 @@
+<%
+  set_meta_tags(
+  title: "AI for your Code Queries | LeChariot",
+  description: "Get some help with your code queries from our AI powered chatbot.",
+  )
+%>
 <%# AI Stuff %>
 <div class="container mt-5">
   <h1>ChadGPT</h1>
