--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LeChariot</title>
+    <meta property="og:image" content="/app/assets/images/lechariot_opengraph.png"/>
+    <meta property="og:title" content="LeChariot | Ask technical questions, get helpful answers"/>
+    <meta property="og:description" content="Ask technical questions, get helpful answers even after the coding bootcamp with LeChariot"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <%= display_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
