--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,32 @@
+<%
+  set_meta_tags(
+  title: "LeChariot | Ask technical questions, get helpful answers",
+  description: "Ask technical questions, get helpful answers even after the coding bootcamp with LeChariot",
+  )
+%>
 <div class="banner d-flex flex-row justify-content-space-between align-items-center">
   <div class="container d-flex pt-4">
-      <div class="banner-content">
-        <h1>Ask technical questions, get helpful answers*</h1>
-        <p>* even after the bootcamp</p>
-        <div class="btn btn-primary mt-4">
-          <%= link_to 'Browse channels', channel_path(Channel.first), :class => "btn" %>
-        </div>
-        <div class="btn btn-outline-primary mt-4">
-          <%= link_to 'Get help', new_issue_path, :class => "btn" %>
-        </div>
+    <div class="banner-content">
+      <h1>Ask technical questions, get helpful answers*</h1>
+      <p>* even after the bootcamp</p>
+      <div class="btn btn-primary mt-4">
+        <%= link_to 'Browse channels', channel_path(Channel.first), :class => "btn" %>
       </div>
-  <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
-    <div class="fs-circle"><div></div></div>
-    <div class="fs-square"></div>
-    <div class="fs-triangle">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319.45 202.04">
-        <path d="M160.48,201.93a1.76,1.76,0,0,1-1,.08c-7.41-9.08-14.66-18.19-22.27-27.83-9.81-12.35-19.25-24.17-28.69-36L96.77,123c-9.3-11.68-18.21-22.86-27.12-34-6.6-8.46-13.2-16.92-20.21-25.88L27.67,36,0,.15H8.59l20-.13,24,.11c18,0,35-.08,52-.12l18,.13,47-.12,30,.13,20-.13,24,.12,51-.14,20.84.14a30.82,30.82,0,0,1,4,1L309.24,13.75c-9.27,11.76-18.12,23-27,34.28q-39.4,49.71-78.78,99.45c-5,6.26-9.88,12.56-15.22,19.35-5.19,6.71-10,12.93-14.78,19.14-4.27,5.22-8.55,10.44-13,16"/>
-      </svg>
+      <div class="btn btn-outline-primary mt-4">
+        <%= link_to 'Get help', new_issue_path, :class => "btn" %>
+      </div>
     </div>
-  </div>
+    <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
+      <div class="fs-circle">
+        <div></div>
+      </div>
+      <div class="fs-square"></div>
+      <div class="fs-triangle">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319.45 202.04">
+          <path d="M160.48,201.93a1.76,1.76,0,0,1-1,.08c-7.41-9.08-14.66-18.19-22.27-27.83-9.81-12.35-19.25-24.17-28.69-36L96.77,123c-9.3-11.68-18.21-22.86-27.12-34-6.6-8.46-13.2-16.92-20.21-25.88L27.67,36,0,.15H8.59l20-.13,24,.11c18,0,35-.08,52-.12l18,.13,47-.12,30,.13,20-.13,24,.12,51-.14,20.84.14a30.82,30.82,0,0,1,4,1L309.24,13.75c-9.27,11.76-18.12,23-27,34.28q-39.4,49.71-78.78,99.45c-5,6.26-9.88,12.56-15.22,19.35-5.19,6.71-10,12.93-14.78,19.14-4.27,5.22-8.55,10.44-13,16"/>
+        </svg>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container pt-4">
@@ -31,17 +39,17 @@
           <h2 class="title">Stimulus</h2>
         </div>
         <div class="content me-5">
-            <p>I can't seem to link my stimulus controllers to a simple form.
+          <p>I can't seem to link my stimulus controllers to a simple form.
             The controller works for normal elements (buttons etc), but not simple forms.
             Help me Obi Wan, you're my only hope...</p>
         </div>
       </div>
       <div class="pink col-2 m-2 p-4 d-flex flex-column">
-          <div class="card-nav mb-auto">
-            <div class="arrow"></div>
-            <div class="header">MOST ACTIVE</div>
-            <h2 class="title">#1122</h2>
-          </div>
+        <div class="card-nav mb-auto">
+          <div class="arrow"></div>
+          <div class="header">MOST ACTIVE</div>
+          <h2 class="title">#1122</h2>
+        </div>
         <div class="content me-3">
           The most active, and therefore best, Le Wagon Batch on Le Chariot right now.
         </div>
@@ -62,11 +70,11 @@
   </div>
   <div class="callout m-5 p-5 center d-flex justify-content-center">
     <div class="justify-content-center col-9 text-center">
-        <h2>Sometimes you need a bit of help before everything falls into place.
+      <h2>Sometimes you need a bit of help before everything falls into place.
         Join Le Chariot today to get access to a community of helpful fellow coders, ready and willing to help you out.</h2>
-    <div class="btn btn-primary col-3 mt-4">
-      <%= link_to 'Join today', new_user_registration_path, :class => "btn" %>
-    </div>
+      <div class="btn btn-primary col-3 mt-4">
+        <%= link_to 'Join today', new_user_registration_path, :class => "btn" %>
+      </div>
     </div>
   </div>
 </div>
