minor meta improvements

--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -69,9 +69,9 @@
         <%= f.submit "Help me refine my issue", class:"btn btn-outline-primary mb-4 mt-4 float-left" %>
       <% end %>
       <p>Refined problem.</p>
-      <div data-controller="copy" class="p-4 mb-4 mt-4 border rounded chat-hint-box">
+      <div data-controller="copy" class="mb-4 mt-4">
         <%= turbo_stream_from "channel_#{@uuid}" %>
-        <div data-copy-target="text" id="ai_output">
+        <div data-copy-target="text" id="ai_output" class="p-2">
           <%= render partial: "ai/output", locals: { generated_idea: "" } %>
         </div>
         <div id="ai_output_image">
