Fixed logo centering

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <div class="logo-title-nav">
-      <div class="child-nav">
+      <div class="child-nav d-flex">
         <%= link_to "/", class: "navbar-brand" do %>
           <%= image_tag asset_path('logo.png') %>
         </div>
