--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -1,7 +1,7 @@
 <%
   set_meta_tags(
-  title: "Create a New Issue | LeChariot",
-  description: "Create a new code issue to get help from the LeChariot community.",
+  title: "Create a New Issue | Le Chariot",
+  description: "Create a new code issue to get help from the Le Chariot community.",
   )
 %>
 <div class="container">
@@ -66,7 +66,7 @@
         [ "DALL-E 512×512	$0.018 / image", "image/512x512"],
         [ "DALL-E 256×256	$0.016 / image", "image/256x256"],
     ], "davinci"), {}, class:"form-control" %>
-        <%= f.submit "Help me refine my issue", class:"btn btn-outline-primary mb-4 mt-4 float-left" %>
+        <%= f.submit "Help me refine my problem", class:"btn btn-outline-primary mb-4 mt-4 float-left" %>
       <% end %>
       <p>Refined problem.</p>
       <div data-controller="copy" class="mb-4 mt-4">
