improved opengraph img

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta property="og:image" content="/app/assets/images/lechariot_opengraph.png"/>
+    <meta property="og:image" content="https://res.cloudinary.com/dl0lttme2/image/upload/v1678883745/lechariot_opengraph_e7jwbf.png"/>
     <meta property="og:title" content="LeChariot | Ask technical questions, get helpful answers"/>
     <meta property="og:description" content="Ask technical questions, get helpful answers even after the coding bootcamp with LeChariot"/>
     <meta property="og:image:width" content="1200"/>
