--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,7 +41,7 @@
           </label>
           <i class="fa-solid fa-moon"></i>
           <li class="nav-item">
-            <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Log in", new_user_session_path, class: "btn btn-outline-primary" %>
           </li>
         <% end %>
       </ul>
