--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -24,6 +24,21 @@
           <%= link_to "👍",  message_favourites_path(message), data: { controller: "confetti", mark_complete_target: "like", confetti_follow_value: false, confetti_animation_value: "basic", action: "click->confetti#spray click->mark-complete#markComplete" } %>
         </div>
       <% end %>
+      <%# Clicking like %>
+      <%# <script type="text/javascript">
+        var clicks = 0;
+        function hello(likesId, messageId) {
+          var clicksElement = document.getElementById(likesId);
+          var clicks = parseInt(clicksElement.innerHTML);
+          clicksElement.innerHTML = clicks + 1;
+          var xhr = new XMLHttpRequest();
+          xhr.open("POST", "/like/" + messageId);
+          xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+          xhr.send(JSON.stringify({ message_id: messageId }));
+        }; %>
+              //
+      <%# </script> %>
+      <%# <button type="button" class="btn btn-primary">Hint</button> %>
     </div>
   </div>
 </div>
