--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,13 +43,13 @@
   font-size: 0.7rem;
   font-weight: bold;
   background-color: white;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
   padding-top: 3px;
   padding-bottom: 3px;
   display: inline-block;
-  border-radius: 5px;
   margin-bottom: 10px;
+  color: #181F25;
 }
 
 .title {
