--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -2,7 +2,7 @@
   <div data-controller="search-issues">
     <div class="issue-top mt-2 position-relative">
       <h4>Open Issues (<%= @issues.length %>)</h4>
-      <%= link_to "Create new issue", new_channel_issue_path(@channel), class: "btn btn-primary w-100 mb-2" %>
+      <%= link_to "Create new issue", new_channel_issue_path(@channel), class: "btn btn-primary w-100 mb-2 btn-white-text" %>
     </div>
     <%= form_with url: channel_issues_path(@channel), method: :get, html: {class:"d-flex search-bar me-3", data: {search_issues_target: "form"}} do |form| %>
       <%= form.text_field :query,
