Fixed home page css and limited the size of cards on profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
       <div class="wide col-4 m-2 p-4 d-flex flex-column">
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
-          <div class="header">POPULAR QUESTION</div>
+          <div class="header-home">POPULAR QUESTION</div>
           <h2 class="title">Stimulus</h2>
         </div>
         <div class="content me-5">
@@ -47,7 +47,7 @@
       <div class="pink col-2 m-2 p-4 d-flex flex-column">
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
-          <div class="header">MOST ACTIVE</div>
+          <div class="header-home">MOST ACTIVE</div>
           <h2 class="title">#1122</h2>
         </div>
         <div class="content me-3">
@@ -57,7 +57,7 @@
       <div class="yellow col-2 m-2 p-4 d-flex flex-column">
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
-          <div class="header">TOP CONTRIBUTOR</div>
+          <div class="header-home">TOP CONTRIBUTOR</div>
           <h2 class="title">Jane Doe</h2>
         </div>
         <div class="user d-flex">
