--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,9 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  min-height: 100px;
   padding: 0px;
   color: rgba(0, 0, 0, 0.3);
+  position: sticky;
+  bottom: 0;
+  width: 100%;
 }
 
 .dark-mode {
