Small fixes to banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <div class="banner-content">
       <h1>Ask technical questions, get helpful answers*</h1>
       <p>* even after the bootcamp</p>
-      <div class="btn btn-primary mt-4">
+      <div class="btn btn-primary mt-4 me-2">
         <%= link_to 'Browse channels', channel_path(Channel.first), :class => "btn btn-white-text" %>
       </div>
       <div class="btn btn-outline-primary mt-4">
