--- a/app/views/ai/_output.html.erb
+++ b/app/views/ai/_output.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
   <% if generated_idea %>
-    <%= content_tag(:div, generated_idea) %>
+    <%= content_tag(:div, generated_idea, class: "aioutput") %>
   <% end %>
 </div>
