Bring back the stars

--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -14,9 +14,10 @@
         <div class="trix-content"><%= message.content %></div>
       </div>
       <br>
-      <div class="d-flex">
-        <p data-mark-complete-target="count" data-like-count="<%= message.favourites.count %>"><strong><%= message.favourites.count %></strong></p>
+      <div class="d-flex flex-row-reverse align-items-center useful-info">
         <p class="ms-1">likes</p>
+        <p data-mark-complete-target="count" data-like-count="<%= message.favourites.count %>"><strong><%= message.favourites.count %> </strong></p>
+        <p class="me-1"><i class="fa-regular fa-star"></i></p>
       </div>
     </div>
     <div class="message-actions" id="pinColor">
